[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/stoneButton.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Tilesheet/towerDefense_tilesheet.png" type="Texture" id=2]
[ext_resource path="res://Sprites/UI/red_panel.png" type="Texture" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.427451, 0.415686, 0.415686, 0.670588 )

[node name="stoneButton" type="TextureButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -560.0
margin_top = -320.0
margin_right = -500.0
margin_bottom = -258.0
toggle_mode = true
button_mask = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="keyLabel" type="Label" parent="."]
margin_left = 46.5858
margin_top = 42.3844
margin_right = 58.5858
margin_bottom = 56.3844
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "2"

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 28.0524, 30.1382 )
scale = Vector2( 0.903891, 0.945081 )
z_index = 1
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 1344, 320, 64, 64 )
__meta__ = {
"_edit_lock_": true
}

[node name="background" type="Sprite" parent="."]
visible = false
position = Vector2( 31.054, 34.0689 )
scale = Vector2( 0.680459, 0.680459 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -100.467
margin_top = -128.0
margin_right = 155.533
custom_styles/normal = SubResource( 1 )
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Node2D" type="Node2D" parent="."]
z_index = 1
__meta__ = {
"_edit_lock_": true
}

[node name="disabledPanel" type="Panel" parent="Node2D"]
margin_left = -0.414185
margin_top = -0.5858
margin_right = 64.5858
margin_bottom = 63.4142
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}
[connection signal="mouse_entered" from="." to="." method="_on_stoneButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_stoneButton_mouse_exited"]
